@@ -3,6 +3,8 @@
                               KijiSchema Release Notes
 
 Version 1.3.7
+  * SCHEMA-663. KijiTablePool now properly sets the retain count when spawning
+      tables to reach the minimum size.
   * SCHEMA-656. Resources which should be closed before JVM shutdown may now
       be registered with DebugResourceTracker, which will log errors for all
       unclosed resources when the JVM shuts down.
